# PG2022-2

./: README.md
Atividade 1/PG2022-2/Lista Exercicio 6-9/HelloTriangle/: Source.cpp
GrayScale/: CMakeLists.txt
GrayScale/HelloTriangle/: SceneManager.cpp  SceneManager.h  Shader.h  Source.cpp  Sprite.cpp  Sprite.h  Timer.cpp
GrayScale/shaders/: hello.fs  text.fs
HelloTriangle/HelloTriangle/: Source.cpp
Linux/: CMakeLists.txt
Linux/HelloTriangle/: Source.cpp
Linux/HelloTriangle/shaders/: Shader.h
Linux/dependencies/GLAD/include/glad/: glad.h
Linux/dependencies/GLAD/src/: glad.c
Lista Exercicio 6-9/: README.md
Lista Exercicio 6-9/HelloTriangle/: Source.cpp
Lista Exercicio 6-9/HelloTriangle/shaders/: Shader.cpp
Lista Exercicio 6-9/cmake/modules/: FindGLFW3.cmake
Lista Exercicios 3/: README.md  desafio.mkv
Lista Exercicios 3/HelloTriangle/: Source.cpp
Lista Exercicios2/: CMakeLists.txt
Lista Exercicios2/HelloTriangle/: Source.cpp
Lista exercicio 5/: README.md
Lista exercicio 5/HelloTriangle/HelloTriangle/: glad.c
Trabalho_Grau_A/: CMakeLists.txt  README.md
Trabalho_Grau_A/HelloTriangle/: SceneManager.cpp  SceneManager.h  Source.cpp  TextRenderer.cpp  TextRenderer.h  Timer.h
Trabalho_Grau_A/shaders/: text.fs  text.vs
win-x86_64/HelloTriangle/HelloTriangle/: HelloTriangle.vcxproj  Source.cpp
